--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@reduxjs/toolkit": "^2.2.6",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
@@ -24,6 +27,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
+    "tailwind-merge": "^2.5.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
