--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@reduxjs/toolkit": "^2.2.6",
+    "axios": "^1.7.4",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "install": "^0.13.0",
+    "lucide-react": "^0.435.0",
+    "npm": "^10.8.2",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
