--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.4",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.5.4",
     "install": "^0.13.0",
     "lucide-react": "^0.435.0",
     "npm": "^10.8.2",
