--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^2.2.6",
+    "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.4",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
     "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.435.0",
     "npm": "^10.8.2",
     "react": "^18.3.1",
