--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.7.4",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "flowbite-react": "^0.10.1",
     "framer-motion": "^11.5.4",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
