--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^2.2.6",
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.4",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "flowbite-react": "^0.10.1",
@@ -43,8 +47,10 @@
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.0",
     "tailwind-merge": "^2.5.2",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
