--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@mdi/react": "^1.6.1",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^2.2.6",
@@ -48,6 +50,7 @@
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "yup": "^1.4.0",
     "zod": "^3.23.8"
