--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.28.0",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.0",
     "sonner": "^1.5.0",
