--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lucide-react": "^0.435.0",
     "npm": "^10.8.2",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
@@ -55,6 +56,7 @@
     "socket.io-client": "^4.8.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
+    "tournament": "^3.2.0",
     "yup": "^1.4.0",
     "zod": "^3.23.8"
   },
