--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.435.0",
+    "next-themes": "^0.3.0",
     "npm": "^10.8.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
