--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-select": "^5.8.1",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.28.0",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
